--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="web_client"></div>
+    <script src="lib/config.js"></script> <!-- load level config -->
     <script src="lib/log.io.js"></script>
     <script>
       var cli = require("/src/client.coffee");
